proj2 initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ lecture2
 project0
 src3
 src4
+src5
+src6
 project1/__pycache__/
 project1/flask_session/
 project1/.env
@@ -9,3 +11,4 @@ project1/credentials.txt
 project1/database_url.json
 project1/db.py
 project1/goodreads.json
+project2/.env
