--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 lecture2
 project0
-src3
-src4
-src5
-src6
-project1/__pycache__/
-project1/flask_session/
-project1/.env
 project1/credentials.txt
 project1/database_url.json
 project1/db.py
 project1/goodreads.json
-project2/.env
+**/flask_session/
+**/.env
+**/__pycache__
+src?
