--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-lecture2
+src?
+**/.env
+**/flask_session/
+**/__pycache__
+**/venv
 project0
 project1/credentials.txt
 project1/database_url.json
 project1/db.py
 project1/goodreads.json
-**/flask_session/
-**/.env
-**/__pycache__
-**/venv
-src?
+lecture2
+ignore_me
